2007-05-03  Brian Bidulock  <bidulock@openss7.org>

	* man/man8/perftest.8.man: updated perftest program
	* util/perftest.c: updated perftest program

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-fifo.at: testsuite factoring
	* tests/testsuite-pipe.at: testsuite factoring
	* tests/testsuite-sad.at: testsuite factoring
	* tests/testsuite-streams.at: testsuite factoring
	* tests/testsuite.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: correct typo

2007-04-01  Brian Bidulock  <bidulock@openss7.org>

	* drivers/str/bufmod.c: corrections to module loading
	* drivers/str/nullmod.c: corrections to module loading
	* drivers/str/nuls.c: corrections to module loading
	* drivers/str/testmod.c: corrections to module loading

2007-03-28  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/strmsg.h: M_TRAIL also belongs to HPUX

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* drivers/str/bufmod.c: support for 2.6.20-1.2307.fc5
	* drivers/str/echo.c: support for 2.6.20-1.2307.fc5
	* drivers/str/mux.c: support for 2.6.20-1.2307.fc5
	* drivers/str/nullmod.c: support for 2.6.20-1.2307.fc5
	* drivers/str/nuls.c: support for 2.6.20-1.2307.fc5
	* drivers/str/testmod.c: support for 2.6.20-1.2307.fc5
	* head/linux-mdep.c: support for 2.6.20-1.2307.fc5
	* head/linux/lislocks.c: support for 2.6.20-1.2307.fc5
	* head/linux/lismem.c: support for 2.6.20-1.2307.fc5
	* include/sys/LiS/linux-mdep.h: support for 2.6.20-1.2307.fc5
	* manual/news.texi: support for 2.6.20-1.2307.fc5

	* drivers/str/bufmod.c: flush corrections
	* drivers/str/dlpidriver.c: flush corrections
	* drivers/str/echo.c: flush corrections
	* drivers/str/loop.c: flush corrections
	* drivers/str/minimux.c: flush corrections
	* drivers/str/mux.c: flush corrections
	* drivers/str/nullstrm.c: flush corrections
	* drivers/str/nuls.c: flush corrections
	* drivers/str/sad.c: flush corrections